# Webex-Tools

./: .env  .env.example  .gitignore  README.md  WebexAPIUtils.md  activate_devices.py  create-flex-device-space.py  people_list.csv  requirements.txt  test.py
input/: device_activation.csv  deviceinput.csv  deviceinput2.csv  deviceinputmeet.csv  people_listtest.csv  sample_users_to_delete.csv  workspace_data.csv  workspaces.csv
memory-bank/: .clinerules  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md  wholesale_customer_management_summary.md
output/: output.csv  outputtest.csv  results.csv
scripts/: README_delete_users.md  README_export_wholesale_customers.md  README_test_token_capabilities.md  README_update_wholesale_customer.md  README_update_wholesale_customer_external_ids.md  TROUBLESHOOTING_401_UNAUTHORIZED.md  UserLookup.py  activate-room-device.py  activate_devices_from_csv.py  check_wholesale_customer_status.py  create-meeting-device.py  create_flex_device_space.py  create_meeting_device.py  debug_env_loading.py  delete_users.py  export_wholesale_customers.py  number-lookup.py  number_lookup.py  rename-workspace.py  test_token_capabilities.py  update_wholesale_customer.py  update_wholesale_customer_external_ids.py
webex-tools/: README.md  pyproject.toml
webex-tools/src/webex_tools/: __init__.py  cli.py
webex-tools/src/webex_tools/commands/: devices.py
webex-tools/src/webex_tools/models/: device.py
webex-tools/src/webex_tools/utils/: api.py  formatting.py
